correct text breaking in span by use of white space

--- a/src/components/taskItem/taskItem.css
+++ b/src/components/taskItem/taskItem.css
@@ -8,6 +8,10 @@
   justify-content: space-between;
 }
 
+.taskItem span {
+  display: block;
+  white-space: nowrap;
+}
 .task-content {
   display: flex;
   gap: 1rem;
